packages/ks/tests/snapshots/render__render_dashboard_empty.snap
---
source: tests/render.rs
expression: output
---
                                   my-infra                                     
────────────────────────────────────────────────────────────────────────────────
 Hosts       │                          No hosts found                          
 Services    │                                                                  
 Secrets     │                         Press 'a' to add                         
 Security    │                                                                  
 Installer   │                                                                  
             │                                                                  
             │                                                                  
             │                                                                  
             │                                                                  
             │                                                                  
             │                                                                  
             │                                                                  
             │                                                                  
             │                                                                  
             │                                                                  
             │                                                                  
             │                                                                  
                      1-5: sections • a: add host • q: quit
