packages/ks/tests/snapshots/render__render_dashboard_no_tailscale.snap
---
source: tests/render.rs
expression: output
---
                                my-infra  2 hosts                               
────────────────────────────────────────────────────────────────────────────────
 Hosts       │ laptop                      │  Arch   x86_64-linux               
 Services    │   localhost                 │                                    
 Secrets     │ server                      │  Modules  (none)                   
 Security    │                             │                                    
 Installer   │                             │                                    
             │                             │                                    
             │                             │                                    
             │                             │                                    
             │                             │                                    
             │                             │                                    
             │                             │                                    
             │                             │                                    
             │                             │                                    
             │                             │                                    
             │                             │                                    
             │                             │                                    
             │                             │                                    
      1-5: sections • ↑/↓: navigate • Enter: details • r: refresh • q: quit
