packages/ks/tests/snapshots/render__render_empty_hosts.snap
---
source: tests/render.rs
expression: output
---
                        empty-repo                          
────────────────────────────────────────────────────────────
 Hosts       │                No hosts found                
 Services    │                                              
 Secrets     │               Press 'a' to add               
 Security    │                                              
 Installer   │                                              
             │                                              
             │                                              
             │                                              
             │                                              
             │                                              
             │                                              
             │                                              
            1-5: sections • a: add host • q: quit
