packages/ks/tests/snapshots/render__render_hosts_list.snap
---
source: tests/render.rs
expression: output
---
                      my-infra  2 hosts                     
────────────────────────────────────────────────────────────
 Hosts       │ laptop             │  Arch   x86_64-linux    
 Services    │ server             │                         
 Secrets     │                    │  Modules  operating-syst
 Security    │                    │                         
 Installer   │                    │                         
             │                    │                         
             │                    │                         
             │                    │                         
             │                    │                         
             │                    │                         
             │                    │                         
             │                    │                         
1-5: sections • ↑/↓: navigate • Enter: details • r: refresh
